# llm-code-generation-eval

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataset_downloader.py  llm_code_generation_main.py  pyproject.toml
llm_code_generation_eval/: dataset_downloader.py
tests/: test_dataset_downloader.py
